--- a/index.html
+++ b/index.html
@@ -188,14 +188,36 @@
     }, 2000);
   }
 
-  // Botones ahora usan Intents de Android
+  // Web Video Caster no cambia
   document.getElementById("tvButton").addEventListener("click", () => {
-    window.location.href = "intent://lzplayerfree.blogspot.com/?url=U2FsdGVkX194Yakl5WUPPvf3sQWIypuGMQAC2sRdcIsk8ecQzGwOCTjPysaOgrWk6PseE8J/ooo6eYR/w01XI9%2Bp7bXubUCJDLvWY5quZlgUv%2B8x9/f1b%2BERzg4xIrI6&m=1#Intent;scheme=https;package=com.instantbits.cast.webvideo;end";
+    openApp("webvideocaster://https://lzplayerfree.blogspot.com/?url=U2FsdGVkX194Yakl5WUPPvf3sQWIypuGMQAC2sRdcIsk8ecQzGwOCTjPysaOgrWk6PseE8J/ooo6eYR/w01XI9%2Bp7bXubUCJDLvWY5quZlgUv%2B8x9/f1b%2BERzg4xIrI6&m=1");
   });
 
+  // Botón Descargar actualizado para 1DM
   document.getElementById("downloadButton").addEventListener("click", () => {
-    window.location.href = "intent://lzplayerfree.blogspot.com/?url=U2FsdGVkX194Yakl5WUPPvf3sQWIypuGMQAC2sRdcIsk8ecQzGwOCTjPysaOgrWk6PseE8J/ooo6eYR/w01XI9%2Bp7bXubUCJDLvWY5quZlgUv%2B8x9/f1b%2BERzg4xIrI6&m=1#Intent;scheme=https;package=com.internet.download.manager;end";
+    const start = Date.now();
+    window.location.href = "intent://lzplayerfree.blogspot.com/?url=U2FsdGVkX194Yakl5WUPPvf3sQWIypuGMQAC2sRdcIsk8ecQzGwOCTjPysaOgrWk6PseE8J/ooo6eYR/w01XI9%2Bp7bXubUCJDLvWY5quZlgUv%2B8x9/f1b%2BERzg4xIrI6&m=1#Intent;scheme=https;package=com.internet.downloadmanager;end";
+    setTimeout(() => {
+        if (Date.now() - start < 1500) {
+            showToast("App no instalada");
+        }
+    }, 1000);
   });
+
+  // Función openApp existente para Web Video Caster
+  function openApp(url) {
+    const start = Date.now();
+    const iframe = document.createElement("iframe");
+    iframe.style.display = "none";
+    iframe.src = url;
+    document.body.appendChild(iframe);
+    setTimeout(() => {
+      document.body.removeChild(iframe);
+      if (Date.now() - start < 1500) {
+        showToast("App no instalada");
+      }
+    }, 1000);
+  }
 </script>
 
 </body>
