--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
 <div id="toast">App no instalada</div>
 
 <script>
-  // Toast sigue igual
+  // Función toast
   function showToast(message) {
     const toast = document.getElementById("toast");
     toast.textContent = message;
@@ -188,37 +188,12 @@
     }, 2000);
   }
 
-  // Web Video Caster no cambia
+  // Web Video Caster - sin cambios
   document.getElementById("tvButton").addEventListener("click", () => {
-    openApp("webvideocaster://https://lzplayerfree.blogspot.com/?url=U2FsdGVkX194Yakl5WUPPvf3sQWIypuGMQAC2sRdcIsk8ecQzGwOCTjPysaOgrWk6PseE8J/ooo6eYR/w01XI9%2Bp7bXubUCJDLvWY5quZlgUv%2B8x9/f1b%2BERzg4xIrI6&m=1");
+    window.location.href = "intent://lzplayerfree.blogspot.com/?url=U2FsdGVkX194Yakl5WUPPvf3sQWIypuGMQAC2sRdcIsk8ecQzGwOCTjPysaOgrWk6PseE8J/ooo6eYR/w01XI9%2Bp7bXubUCJDLvWY5quZlgUv%2B8x9/f1b%2BERzg4xIrI6&m=1#Intent;scheme=https;package=com.instantbits.cast.webvideo;end";
   });
 
-  // Botón Descargar actualizado para 1DM
+  // 1DM - con toast si no está instalada
   document.getElementById("downloadButton").addEventListener("click", () => {
     const start = Date.now();
-    window.location.href = "intent://lzplayerfree.blogspot.com/?url=U2FsdGVkX194Yakl5WUPPvf3sQWIypuGMQAC2sRdcIsk8ecQzGwOCTjPysaOgrWk6PseE8J/ooo6eYR/w01XI9%2Bp7bXubUCJDLvWY5quZlgUv%2B8x9/f1b%2BERzg4xIrI6&m=1#Intent;scheme=https;package=com.internet.downloadmanager;end";
-    setTimeout(() => {
-        if (Date.now() - start < 1500) {
-            showToast("App no instalada");
-        }
-    }, 1000);
-  });
-
-  // Función openApp existente para Web Video Caster
-  function openApp(url) {
-    const start = Date.now();
-    const iframe = document.createElement("iframe");
-    iframe.style.display = "none";
-    iframe.src = url;
-    document.body.appendChild(iframe);
-    setTimeout(() => {
-      document.body.removeChild(iframe);
-      if (Date.now() - start < 1500) {
-        showToast("App no instalada");
-      }
-    }, 1000);
-  }
-</script>
-
-</body>
-</html>
+    window.location.href = "intent://lzplayerfree.blogspot.com/?url=U2FsdGVkX194Yakl5WUPPvf3sQWIypuGMQAC2sRdcIsk8ecQzGwOCTjPysaOgrWk6PseE8J/ooo6eYR/w01XI9%2Bp7bXubUCJDLvWY5quZlgUv%2B8x9/f1b%2BERzg4x
