--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
     fill: #ffcc00;
   }
 
-  /* Botones */
+  /* Botón */
   .buttons {
     display: flex;
     gap: 10px;
@@ -94,8 +94,10 @@
     transition: 0.3s;
   }
 
-  .buttons button:hover {
-    background: #e50914;
+  /* Efecto hover y active */
+  .buttons button:hover,
+  .buttons button:active {
+    background: #e50914; /* rojo Netflix-style */
   }
 
   /* Sinopsis */
@@ -105,25 +107,6 @@
     border-radius: 10px;
     line-height: 1.5;
     color: #ddd;
-  }
-
-  /* Toast */
-  #toast {
-    visibility: hidden;
-    min-width: 200px;
-    background-color: #333;
-    color: #fff;
-    text-align: center;
-    border-radius: 8px;
-    padding: 10px;
-    position: fixed;
-    z-index: 9999;
-    left: 50%;
-    bottom: 30px;
-    transform: translateX(-50%);
-    font-size: 14px;
-    opacity: 0;
-    transition: opacity 0.5s;
   }
 
 </style>
@@ -159,10 +142,9 @@
     </div>
   </div>
 
-  <!-- Botones -->
+  <!-- Botón Ver en TV -->
   <div class="buttons">
     <button id="tvButton">Ver en TV</button>
-    <button id="downloadButton">Descargar</button>
   </div>
 
   <!-- Sinopsis -->
@@ -172,28 +154,12 @@
 
 </div>
 
-<!-- Toast -->
-<div id="toast">App no instalada</div>
-
 <script>
-  // Función toast
-  function showToast(message) {
-    const toast = document.getElementById("toast");
-    toast.textContent = message;
-    toast.style.visibility = "visible";
-    toast.style.opacity = "1";
-    setTimeout(() => {
-      toast.style.opacity = "0";
-      setTimeout(() => toast.style.visibility = "hidden", 500);
-    }, 2000);
-  }
-
-  // Web Video Caster - sin cambios
+  // Botón Web Video Caster
   document.getElementById("tvButton").addEventListener("click", () => {
     window.location.href = "intent://lzplayerfree.blogspot.com/?url=U2FsdGVkX194Yakl5WUPPvf3sQWIypuGMQAC2sRdcIsk8ecQzGwOCTjPysaOgrWk6PseE8J/ooo6eYR/w01XI9%2Bp7bXubUCJDLvWY5quZlgUv%2B8x9/f1b%2BERzg4xIrI6&m=1#Intent;scheme=https;package=com.instantbits.cast.webvideo;end";
   });
+</script>
 
-  // 1DM - con toast si no está instalada
-  document.getElementById("downloadButton").addEventListener("click", () => {
-    const start = Date.now();
-    window.location.href = "intent://lzplayerfree.blogspot.com/?url=U2FsdGVkX194Yakl5WUPPvf3sQWIypuGMQAC2sRdcIsk8ecQzGwOCTjPysaOgrWk6PseE8J/ooo6eYR/w01XI9%2Bp7bXubUCJDLvWY5quZlgUv%2B8x9/f1b%2BERzg4x
+</body>
+</html>
