--- a/index.html
+++ b/index.html
@@ -3,222 +3,63 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>FILMBOX</title>
+<title>VER SCREAMBOAT LA MASACRE DEL RATÓN ONLINE</title>
 <style>
-body {
-  margin: 0;
-  font-family: Arial, sans-serif;
-  background-color: #111;
-  color: #fff;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  min-height: 100vh;
-}
-
-/* Fondo detrás del póster con gradiente hacia negro */
-.detail-background {
-  width: 100%;
-  height: 250px;
-  background-size: cover;
-  background-position: center;
-  position: relative;
-}
-
-.detail-background::after {
-  content: '';
-  position: absolute;
-  inset: 0;
-  background: linear-gradient(to bottom, rgba(17,17,17,0) 60%, rgba(17,17,17,1) 100%);
-}
-
-/* Contenedor central compacto */
-.detail-container {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  max-width: 280px;
-  margin-top: -120px;
-  z-index: 1;
-  gap: 10px;
-}
-
-/* Póster pequeño y centrado */
-.poster-container img {
-  width: 160px;
-  border-radius: 10px;
-  box-shadow: 0 0 15px rgba(0,0,0,0.7);
-}
-
-/* Detalles debajo del póster */
-.details-container {
-  text-align: center;
-  width: 100%;
-  background-color: #111;
-  padding: 15px;
-  border-radius: 10px;
-  position: relative;
-}
-
-.details-container h1 {
-  font-size: 18px;
-  margin: 5px 0 5px;
-  color: #fff;
-}
-
-.details-container .info {
-  display: flex;
-  justify-content: center;
-  gap: 10px;
-  margin-bottom: 8px;
-}
-
-.details-container .info .item {
-  display: flex;
-  align-items: center;
-  gap: 4px;
-  font-size: 12px;
-  color: #fff;
-}
-
-.details-container .info svg {
-  width: 12px;
-  height: 12px;
-  fill: #fff;
-}
-
-/* Sinopsis */
-.details-container .sinopsis-wrapper {
-  max-height: 80px;
-  overflow: hidden;
-  transition: max-height 0.4s ease;
-  position: relative;
-  padding-bottom: 10px; /* espacio extra para que no choque con botón */
-}
-
-.details-container p {
-  font-size: 13px;
-  line-height: 1.3;
-  color: #fff;
-  margin: 0;
-}
-
-.details-container .ver-mas {
-  color: #e81c1c;
-  cursor: pointer;
-  font-size: 13px;
-  margin-top: 4px;
-  display: none; /* oculto por defecto */
-}
-
-/* Botón de reproducción más grande fijo en la esquina */
-.play-btn {
-  width: 70px;
-  height: 70px;
-  background: #e81c1c;
-  border-radius: 50%;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  position: fixed;
-  bottom: 15px;
-  right: 15px;
-  text-decoration: none;
-  color: #fff;
-  font-size: 30px;
-  box-shadow: 0 0 10px rgba(255,255,255,0.5);
-  z-index: 2;
-}
-
-.play-btn:hover {
-  transform: scale(1.1);
-  transition: transform 0.2s;
-}
+body{background:#0d0d0d;color:#fff;font-family:Poppins,sans-serif;margin:0}
+.container{max-width:900px;margin:auto;padding:16px}
+.video-container{background:#000;border-radius:16px;overflow:hidden;box-shadow:0 0 15px rgba(255,0,0,.4)}
+iframe{width:100%;height:200px;border:none}
+.info-box{background:#111;border-radius:16px;padding:16px;margin-top:16px;display:flex;gap:16px;align-items:flex-start}
+.poster{width:100px;border-radius:10px}
+.details{flex:1}
+.details h2{text-transform:uppercase;margin:0 0 8px}
+.icons{display:flex;gap:16px;color:#ccc;font-size:.9rem;flex-wrap:wrap}
+.icon-item{display:flex;align-items:center;gap:6px}
+.icon-item svg{width:18px;height:18px;fill:#e50914}
+.synopsis{background:#111;border-radius:16px;padding:16px;margin-top:16px;color:#ccc;line-height:1.5}
 </style>
 </head>
 <body>
+<div class="container">
 
-<div class="detail-background" id="detailBackground"></div>
+<div class="video-container">
+  <iframe src="https://lzplayerfree.blogspot.com/?url=U2FsdGVkX194Yakl5WUPPvf3sQWIypuGMQAC2sRdcIsk8ecQzGwOCTjPysaOgrWk6PseE8J/ooo6eYR/w01XI9%2Bp7bXubUCJDLvWY5quZlgUv%2B8x9/f1b%2BERzg4xIrI6&m=1" allowfullscreen></iframe>
+</div>
 
-<div class="detail-container">
-  <div class="poster-container">
-    <img id="detailPoster" src="" alt="Póster">
-  </div>
-  <div class="details-container">
-    <h1 id="detailTitle"></h1>
-    <div class="info">
-      <div class="item">
-        <svg viewBox="0 0 24 24"><path d="M19 4h-1V2h-2v2H8V2H6v2H5a2 2 0 0 0-2 2v14a2 2 0 0 0 2 2h14a2 2 0 0 0 2-2V6a2 2 0 0 0-2-2zm0 16H5V9h14z"></path></svg>
-        <span id="detailYear">2025</span>
+<div class="info-box">
+  <img src="https://image.tmdb.org/t/p/original/cYDbY4ZSehB0r6qqtghTphq8DTn.jpg" class="poster">
+  <div class="details">
+    <h2>SCREAMBOAT LA MASACRE DEL RATÓN</h2>
+
+    <div class="icons">
+
+      <div class="icon-item">
+        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
+          <path d="M19 4h-1V2h-2v2H8V2H6v2H5a2 2 0 0 0-2 2v14a2 2 0 0 0 2 2h14a2 2 0 0 0 2-2V6a2 2 0 0 0-2-2Zm0 16H5V10h14v10ZM5 8V6h14v2H5Z"/>
+        </svg>
+        <span>2025</span>
       </div>
-      <div class="item">
-        <svg viewBox="0 0 24 24"><path d="M12 2a10 10 0 1 0 10 10A10 10 0 0 0 12 2zm1 11h4v2h-6V7h2z"></path></svg>
-        <span id="detailDuration">120 min</span>
+
+      <div class="icon-item">
+        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
+          <path d="M12 20a8 8 0 1 0 0-16 8 8 0 0 0 0 16Zm0 2a10 10 0 1 1 0-20 10 10 0 0 1 0 20Zm.5-10V7h-1.5v6h5v-1.5Z"/>
+        </svg>
+        <span>1h 42 min</span>
       </div>
-      <div class="item">
-        <svg viewBox="0 0 24 24"><path d="M12 17.27L18.18 21l-1.64-7.03L22 9.24l-7.19-.61L12 2 9.19 8.63 2 9.24l5.46 4.73L5.82 21z "></path></svg>
-        <span id="detailRating">8.5</span>
+
+      <div class="icon-item">
+        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
+          <path d="m12 17.27 6.18 3.73-1.64-7.03L21 9.24l-7.19-.61L12 2 10.19 8.63 3 9.24l4.46 4.73L5.82 21Z"/>
+        </svg>
+        <span>5.1</span>
       </div>
+
     </div>
-    <div class="sinopsis-wrapper" id="sinopsisWrapper">
-      <p id="detailSynopsis"></p>
-    </div>
-    <div class="ver-mas" id="verMasBtn">Ver más</div>
   </div>
 </div>
 
-<a id="detailPlay" href="" target="_blank" class="play-btn">▶</a>
+<div class="synopsis">Un travieso ratón acecha a un grupo de neoyorquinos en un viaje nocturno en ferry, desatando un caos asesino en un viaje relajante. ¿Podrá la variopinta tripulación del barco encontrar la manera de detener a esta criatura asesina?</div>
 
-<script>
-function showMovieDetail(posterUrl, backgroundUrl, title, year, duration, rating, synopsis, videoUrl) {
-  document.getElementById('detailPoster').src = posterUrl;
-  document.getElementById('detailBackground').style.backgroundImage = `url('${backgroundUrl}')`;
-  document.getElementById('detailTitle').textContent = title;
-  document.getElementById('detailYear').textContent = year;
-  document.getElementById('detailDuration').textContent = duration;
-  document.getElementById('detailRating').textContent = rating;
-
-  const sinopsisElem = document.getElementById('detailSynopsis');
-  const wrapper = document.getElementById('sinopsisWrapper');
-  const verMasBtn = document.getElementById('verMasBtn');
-
-  sinopsisElem.textContent = synopsis;
-
-  setTimeout(() => {
-    if (sinopsisElem.scrollHeight > wrapper.clientHeight) {
-      verMasBtn.style.display = 'block';
-    } else {
-      verMasBtn.style.display = 'none';
-    }
-  }, 50);
-
-  verMasBtn.onclick = () => {
-    if (wrapper.style.maxHeight === '80px' || wrapper.style.maxHeight === '') {
-      wrapper.style.maxHeight = '200px';
-      wrapper.style.overflowY = 'auto';
-      verMasBtn.textContent = 'Ver menos';
-    } else {
-      wrapper.style.maxHeight = '80px';
-      wrapper.style.overflowY = 'hidden';
-      verMasBtn.textContent = 'Ver más';
-    }
-  }
-
-  document.getElementById('detailPlay').href = videoUrl;
-}
-
-// Ejemplo
-showMovieDetail(
-  'https://image.tmdb.org/t/p/original/cYDbY4ZSehB0r6qqtghTphq8DTn.jpg',
-  'https://image.tmdb.org/t/p/original/vSTLSr2WbQ6jE9cTkk86yQP5Nb1.jpg',
-  'ESCREAMBOAT LA MASACRE DEL RATON',
-  '2025',
-  '1 h 41 min',
-  '7.4',
-  'Un travieso ratón acecha a un grupo de neoyorquinos en un viaje nocturno en ferry, desatando un caos asesino en un viaje relajante. ¿Podrá la variopinta tripulación del barco encontrar la manera de detener a esta criatura asesina?',
-  'https://lzplayerfree.blogspot.com/?url=U2FsdGVkX194Yakl5WUPPvf3sQWIypuGMQAC2sRdcIsk8ecQzGwOCTjPysaOgrWk6PseE8J/ooo6eYR/w01XI9%2Bp7bXubUCJDLvWY5quZlgUv%2B8x9/f1b%2BERzg4xIrI6&m=1'
-);
-</script>
-
+</div>
 </body>
 </html>
